# Vimrc-Helper

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  Mainwindow.cpp  Mainwindow.h  Mainwindow.ui  README.md  additions.md  main.cpp  plug_widget.cpp  plug_widget.ui  shortcut_son_widget_class.cpp  shortcut_son_widget_class.h  shortcut_son_widget_class.ui  shortcut_widget_class.cpp  shortcut_widget_class.h  shortcut_widget_class.ui  vimrc_helper.qrc
Vimrc-Helper-Remake/: main.cpp  plug_widget.h  plug_widget.ui
vimrc_helper/: main.cpp  switchbutton.cpp  switchbutton.h  vimrc_helper.cpp  vimrc_helper.h  vimrc_helper.qrc  vimrc_helper.ui
vimrc_helper-Linux/: CMakeLists.txt  CMakeLists.txt.user.7600d67  main.cpp  vimrc_helper.cpp  vimrc_helper.h  vimrc_helper.ui
vimrc_helper-Windows/: vimrc_helper.sln
vimrc_helper-Windows/vimrc_helper/: ui_vimrc_helper.h  vimrc_helper.cpp  vimrc_helper.h  vimrc_helper.vcxproj  vimrc_helper.vcxproj.filters
vimrc_helper-Windows/vimrc_helper/x64/Debug/: vimrc_helper.exe.recipe
vimrc_helper-Windows/vimrc_helper/x64/Debug/moc/: moc_switchbutton.cpp  moc_switchcontrol.cpp  moc_vimrc_helper.cpp
vimrc_helper-Windows/vimrc_helper/x64/Debug/vimrc_helper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog  vimrc_helper.lastbuildstate  vimrc_helper.write.1u.tlog
vimrc_helper-Windows/vimrc_helper/x64/Release/: vimrc_helper.exe.recipe
(+27 files in other folders)
